--- a/tixianjilu.html
+++ b/tixianjilu.html
@@ -105,6 +105,21 @@
 				</dl>
 			</div>
 			<a class="winpop_btn" href="#">全部提取</a>
+			<div class="winpop_form">
+				<ul>
+					<li>
+						<input type="text" id="" value="" placeholder="短信验证码" />
+						<a href="#" class="code_btn">发送验证码</a>
+					</li>
+					<li>
+						<input type="password" name="" placeholder="请输入提现密码" />
+					</li>
+				</ul>
+				<div class="winpop_btn_box">
+					<a href="#">确定</a>
+					<a href="#" class="cancel_btn">取消</a>
+				</div>
+			</div>
 		</div>
 	</body>
 
