--- a/tixianjilu.html
+++ b/tixianjilu.html
@@ -121,6 +121,13 @@
 				</div>
 			</div>
 		</div>
+		<script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://cdn.bootcss.com/jquery-placeholder/2.3.1/jquery.placeholder.min.js"></script>
+		<script type="text/javascript">
+			$(function(){
+				$('input, textarea').placeholder();
+			});
+		</script>
 	</body>
 
 </html>
