--- a/sign.html
+++ b/sign.html
@@ -32,7 +32,7 @@
 								</li>
 								<li>
 									<input type="text" placeholder="发送短信验证码" name="" id="" value="" />
-									<a href="#" class="code_btn">发送验证码</a>
+									<input value="发送验证码" class="code_btn" type="button"></input>
 								</li>
 								<li>
 									<input type="text" placeholder="姓名" name="" id="" value="" />
