--- a/tixianjilu.html
+++ b/tixianjilu.html
@@ -109,7 +109,7 @@
 				<ul>
 					<li>
 						<input type="text" id="" value="" placeholder="短信验证码" />
-						<a href="#" class="code_btn">发送验证码</a>
+						<input value="发送验证码" class="code_btn" type="button"></input>
 					</li>
 					<li>
 						<input type="password" name="" placeholder="请输入提现密码" />
