--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<div class="name">王丽丽<span>[高级会员]</span></div>
 					<div class="id">交易商ID：10951122334</div>
 					<div class="money"><i></i>金币：126438</div>
-					<a class="extract_btn" href="#">提取现金</a>
+					<input type="button" id="" value="提取现金" class="extract_btn" />
 					<ul class="menu">
 						<li><a href="#" class="active">我的个人资料</a></li>
 						<li><a href="#">我的资产明细</a></li>
@@ -34,7 +34,7 @@
 						<li><a href="#">我的一级会员</a></li>
 						<li><a href="#">我的二级会员</a></li>
 						<li><a href="#">我的三级会员</a></li>
-						<li><a href="#">退  出</a></li>
+						<li><input type="button" id="" value="退  出" /></li>
 					</ul>
 				</div>
 				<div class="slide_con">
