--- a/tixianjilu.html
+++ b/tixianjilu.html
@@ -26,15 +26,15 @@
 					<div class="name">王丽丽<span>[高级会员]</span></div>
 					<div class="id">交易商ID：10951122334</div>
 					<div class="money"><i></i>金币：126438</div>
-					<a class="extract_btn" href="#">提取现金</a>
+					<input type="button" id="" value="提取现金" class="extract_btn" />
 					<ul class="menu">
 						<li><a href="#">我的个人资料</a></li>
 						<li><a href="#">我的资产明细</a></li>
-						<li><a href="#" class="active">我的提现记录</a></li>
-						<li><a href="#">我的一级会员</a></li>
+						<li><a href="#">我的提现记录</a></li>
+						<li><a href="#" class="active">我的一级会员</a></li>
 						<li><a href="#">我的二级会员</a></li>
 						<li><a href="#">我的三级会员</a></li>
-						<li><a href="#">退  出</a></li>
+						<li><input type="button" id="" value="退  出" /></li>
 					</ul>
 				</div>
 				<div class="slide_con">
@@ -104,7 +104,7 @@
 					<dd>本次手续费：<span>12金币</span></dd>
 				</dl>
 			</div>
-			<a class="winpop_btn" href="#">全部提取</a>
+			<input type="button" class="winpop_btn" value="全部提取"></input>
 			<div class="winpop_form">
 				<ul>
 					<li>
@@ -116,8 +116,10 @@
 					</li>
 				</ul>
 				<div class="winpop_btn_box">
-					<a href="#">确定</a>
-					<a href="#" class="cancel_btn">取消</a>
+					<!--<a href="#">确定</a>
+					<a href="#" class="cancel_btn">取消</a>-->
+					<input type="button" value="确定"></input>
+					<input type="button" value="取消" class="cancel_btn"></input>
 				</div>
 			</div>
 		</div>
