--- a/login2.html
+++ b/login2.html
@@ -16,7 +16,7 @@
 		<![endif]-->
 		<style type="text/css">
 			.form_login_box{background: url(img/login_bg2.jpg) no-repeat center top;height: 694px;}
-			.login_box{margin: 100px 0 0 730px;}
+			.login_box{float: left;margin: 100px 0 0 23px;}
 			.login_winpop{background-image: url(img/winpop_bg2.png);border-color: #debd68;}
 			.login_other a.sign_href{color: #e40d0d;}
 			.form_bg .footer{color: #fff;position: static;}
@@ -27,12 +27,16 @@
 			#kefu .close{float: right;margin-right: 10px;margin-top: 10px;cursor: pointer;}
 			.right_bar{width: 50px;height: 157px;position: absolute;top: 300px;right: 1px;z-index: 9999;}
 			.right_bar img{cursor: pointer;}
+			.flash_box{width: 710px; float: left; height: 694px;}
 		</style>
 	</head>
 
 	<body class="form_bg">
 		<div class="wrapper">
 			<div class="form_box form_login_box">
+				<div class="flash_box">
+					<!--flash放到这-->
+				</div>
 				<div class="login_box">
 					<div class="login_tit">会员登录</div>
 					<div class="login_winpop form_winpop">
